RegressionTests/TestSuiteExport/reject/undefined_name.blade
// EXPECT: fail
// DIAGNOSTICS: UndefinedName

cog task main() {
    x = 1;
}